--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   onboarding_animation: ^0.0.3
   sqflite: ^2.3.3+1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
