--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   onboarding_animation: ^0.0.3
   sqflite: ^2.3.3+1
   cached_network_image: ^3.3.1
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
